HTML Template ready

--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
     <title>WeatherApp</title>
   </head>
   <body>
+    <header>
+      <h1>Welcome to the WeatherApp</h1>
+    </header>
+    <main>
+      <section class="input__wrapper">
+        <form onsubmit="return false">
+          <h3>For which location do you want to check the weather?</h3>
+          <input
+            id="inputSearch"
+            type="text"
+            placeholder="Please enter a city name or zip-code"
+          />
+          <button>Show Weather</button>
+        </form>
+        <hr />
+      </section>
+      <section class="output__wrapper">
+        <h3>Here are the Weather-Informations you are looking for:</h3>
+        <div class="output__dataToday">
+          <h5>Weather in:</h5>
+          <p class="outputName">Leverkusen</p>
+          <p class="outputTemp">20 Grad</p>
+          <p class="outputCloudiness">20%</p>
+          <p class="outputWeatherDescription">Light rain</p>
+          <h5>Obtained at:</h5>
+          <p class="outputDate">Montag 20.November 2023</p>
+          <hr />
+        </div>
+        <div class="output__dataFollowingDays">
+          <h5>Here are the Weather-Informations for the next days:</h5>
+          <p class="outputTemp">20 Grad</p>
+          <p class="outputCloudiness">20%</p>
+          <p class="outputWeatherDescription">Light rain</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <hr />
+      <p>Done with love from Runhong, Samuel & Konstantin</p>
+      <a href="https://github.com/huangrunhong">Github Profile</a>
+      <a href="https://github.com/samuelaliyari">Github Profile</a>
+      <a href="https://github.com/KWiefel">Github Profile</a>
+    </footer>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
