--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           />
           <button>Show Weather</button>
         </form>
-        <hr />
       </section>
       <section class="output__wrapper">
         <h3>Here are the Weather-Informations you are looking for:</h3>
@@ -32,7 +31,6 @@
           <p class="outputWeatherDescription">Light rain</p>
           <h5>Obtained at:</h5>
           <p class="outputDate">Montag 20.November 2023</p>
-          <hr />
         </div>
         <div class="output__dataFollowingDays">
           <h5>Here are the Weather-Informations for the next days:</h5>
@@ -43,11 +41,10 @@
       </section>
     </main>
     <footer>
-      <hr />
       <p>Done with love from Runhong, Samuel & Konstantin</p>
-      <a href="https://github.com/huangrunhong">Github Profile</a>
-      <a href="https://github.com/samuelaliyari">Github Profile</a>
-      <a href="https://github.com/KWiefel">Github Profile</a>
+      <a href="https://github.com/huangrunhong">Github Runhong</a>
+      <a href="https://github.com/samuelaliyari">Github Samuel</a>
+      <a href="https://github.com/KWiefel">Github Konstantin</a>
     </footer>
     <script src="./assets/js/main.js"></script>
   </body>
