--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherApp</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/media1000.css" />
+    <link rel="stylesheet" href="./assets/css/media600.css" />
   </head>
   <body>
     <div></div>
@@ -35,11 +37,45 @@
           </div>
         </div>
         <div class="output__dataFollowingDays">
-          <h5>Here are the Weather-Informations for the next days:</h5>
-          <p class="outputTemp">20°</p>
-          <div class="extraInfo">
-            <p class="outputCloudiness">20%</p>
-            <p class="outputWeatherDescription">Light rain</p>
+          <div>
+            <h5>Tomorrow</h5>
+            <p class="outputTemp">20°</p>
+            <div class="extraInfo">
+              <p class="outputCloudiness">20%</p>
+              <p class="outputWeatherDescription">Light rain</p>
+            </div>
+          </div>
+          <div>
+            <h5>23.10.2023</h5>
+            <p class="outputTemp">20°</p>
+            <div class="extraInfo">
+              <p class="outputCloudiness">20%</p>
+              <p class="outputWeatherDescription">Light rain</p>
+            </div>
+          </div>
+          <div>
+            <h5>24.10.2023</h5>
+            <p class="outputTemp">20°</p>
+            <div class="extraInfo">
+              <p class="outputCloudiness">20%</p>
+              <p class="outputWeatherDescription">Light rain</p>
+            </div>
+          </div>
+          <div>
+            <h5>25.10.2023</h5>
+            <p class="outputTemp">20°</p>
+            <div class="extraInfo">
+              <p class="outputCloudiness">20%</p>
+              <p class="outputWeatherDescription">Light rain</p>
+            </div>
+          </div>
+          <div>
+            <h5>26.10.2023</h5>
+            <p class="outputTemp">20°</p>
+            <div class="extraInfo">
+              <p class="outputCloudiness">20%</p>
+              <p class="outputWeatherDescription">Light rain</p>
+            </div>
           </div>
         </div>
       </section>
