--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       </section>
     </header>
     <main>
-      <section class="input__wrapper">
+      <section class="input__wrapper" >
         <form onsubmit="return false">
           <input
             id="inputSearch"
             type="text"
-            placeholder="Please enter a city name or zip-code"
+            placeholder="enter a city name or zip-code"
+            onclick="value = ''"
           />
         </form>
       </section>
