--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <input
             id="inputSearch"
             type="text"
-            placeholder="Please enter a city name or zip-code"
+            placeholder="City name or zip-code"
           />
         </form>
       </section>
